<resources>
    <string name="app_name">No Jump</string>
    <string name="xposed_description">Intercept jumps between applications where dataString is not empty</string>
    <string name="time">Time</string>
    <string name="callingPackage" translatable="false">callingPackage</string>
    <string name="dataString" translatable="false">dataString</string>
    <string name="dataStringContain">dataString contains</string>
    <string name="whiteList">Package name white list</string>
    <string name="blockList">Package name block list</string>
    <string name="callingPackageContain">callingPackage contains, separated by comma.</string>
    <string name="log">Log</string>
    <string name="rule">Rule</string>
    <string name="about">About</string>
    <string name="view">Check</string>
    <string name="tip_log">All jumps between applications where dataString is not empty will be recorded here, log only work when I am running.</string>
    <string name="clearLog">Clear log</string>
    <string name="noEmpty">No empty</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="add">Add</string>
    <string name="blocked">No Jump: blocked</string>
    <string name="batteryTip">Please set to ignore battery optimization</string>
</resources>